--- a/index.html
+++ b/index.html
@@ -414,12 +414,12 @@
                 </span>
             </div>
             <div class="line">
-                <img src="images/ativosagora.jpg" alt="AtivosAgora">
-                <p>Ativos Agora</p>
-                <span>ago 2020 – o momento| <b>Desenvolvedor Front-End</b></span>
+                <img src="images/totvs.jpg" alt="TOTVS">
+                <p>TOTVS</p>
+                <span>abr 2022 – o momento | <b>Desenvolvedor Front-End</b></span>
                 <span>
-                    Desenvolvimento de um site para monitoramento de ativos financeiros em tempo real gratuito. <br>
-                    <b class="tec">Tecnologias: HTML, CSS, JavaScript, REST, API e Git</b>
+                    Fluig plataforma. <br>
+                    <b class="tec">Tecnologias: HTML, CSS, JavaScript, API, JQuery e Git</b>
                 </span>
             </div>
         </div>
