--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
                 </span>
             </div>
             <div class="line">
-                <img src="images/totvs.jpg" alt="TOTVS">
+                <img src="images/totvs.jpeg" alt="TOTVS">
                 <p>TOTVS</p>
                 <span>abr 2022 – o momento | <b>Desenvolvedor Front-End</b></span>
                 <span>
