--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 						<p>Hospedapp | Desenvolvedor Full Stack</p>
 						<span class="period">jul 2016 – jul 2018</span>
 						<span>
-							Atuei como desenvolvedor Full Stack no time de tecnologia dessa startup, onde o foco era a gestão de pequenas e médias pousadas <br>
+							Atuei como desenvolvedor Full Stack no time de tecnologia dessa startup, onde o foco era a gestão de pequenas e médias pousadas. <br>
 							<b class="tec">Tecnologias: HTML, CSS, JavaScript, PHP, AJAX, JQuery, MySQL e Git</b>
 						</span>
 					</div>
@@ -110,7 +110,7 @@
 						<span class="period">abr 2022 – o momento</span>
 						<span>
 							Faço parte parte do Squad de Portais do TOTVS Fluig como desenvolvedor Front-End, onde o foco é unificar processos, sistemas e pessoas. 
-							Desenvolvendo novas funcionalidades e realizando manutenções, utilizando metodologias ágeis Scrum e Kanban, Code Review, Style Guide e Clean Code<br>
+							Desenvolvendo novas funcionalidades e realizando manutenções, utilizando metodologias ágeis Scrum e Kanban, Code Review, Style Guide e Clean Code. <br>
 							<b class="tec">Tecnologias: HTML, CSS, JavaScript, Web Components, Mustache, JQuery, API REST, e Git</b>
 						</span>
 					</div>
