--- a/en-US.html
+++ b/en-US.html
@@ -81,7 +81,7 @@
 						<p>Hospedapp | Full Stack Developer</p>
 						<span class="period">jul 2016 – jul 2018</span>
 						<span>
-							I worked as a Full Stack developer in the technology team of this startup, where the focus was the management of small and medium-sized inns <br>
+							I worked as a Full Stack developer in the technology team of this startup, where the focus was the management of small and medium-sized inns. <br>
 							<b class="tec">Technologies: HTML, CSS, JavaScript, PHP, AJAX, JQuery, MySQL e Git</b>
 						</span>
 					</div>
@@ -110,7 +110,7 @@
 						<span class="period">apr 2022 – present</span>
 						<span>
 							I am part of the TOTVS Fluig Portal Squad as a Front-End developer, where the focus is to unify processes, systems and people. 
-							Developing new features and performing maintenance, using agile Scrum and Kanban methodologies, Code Review, Style Guide and Clean Code<br>
+							Developing new features and performing maintenance, using agile Scrum and Kanban methodologies, Code Review, Style Guide and Clean Code. <br>
 							<b class="tec">Tecnologias: HTML, CSS, JavaScript, Web Components, Mustache, JQuery, API REST, e Git</b>
 						</span>
 					</div>
